router and basic layout

--- a/src/app/mainscreen/header/header.component.html
+++ b/src/app/mainscreen/header/header.component.html
@@ -1,1 +1,5 @@
-<p>header works!</p>
+<div id="header-container">
+    <img src="assets/img/logo/logo.svg" alt="DABubble Logo">
+    <input type="text" placeholder="Search">
+    <h1>User</h1>
+</div>
