--- a/src/app/mainscreen/mainscreen.component.html
+++ b/src/app/mainscreen/mainscreen.component.html
@@ -1,1 +1,8 @@
-<p>mainscreen works!</p>
+<div id="main-container">
+    <app-header></app-header>
+    <div id="main-body">    
+        <app-sidenav></app-sidenav>
+
+
+    </div>
+</div>
