--- a/src/app/mainscreen/header/header.component.html
+++ b/src/app/mainscreen/header/header.component.html
@@ -1,5 +1,5 @@
 <div id="header-container">
     <img src="assets/img/logo/logo.svg" alt="DABubble Logo">
-    <input type="text" placeholder="Search">
+    <input id="header-searchfield" type="text" placeholder="Code learning durchsuchen">
     <h1>User</h1>
 </div>
