--- a/src/app/mainscreen/header/header.component.scss
+++ b/src/app/mainscreen/header/header.component.scss
@@ -2,4 +2,11 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+
+    #header-searchfield{
+        width: 50%;
+        border-radius: 42px;
+        height: 40px;
+    }
 }
