--- a/src/app/startscreen/login/login.component.html
+++ b/src/app/startscreen/login/login.component.html
@@ -1,1 +1,70 @@
-<p>login works!</p>
+<mat-card class="user-login-container br-30">
+    
+        <span class="user-login-title">
+            <h1>Anmeldung</h1>
+            Wir empfehlen dir, die E-Mail-Adresse zu nutzen, die
+            du bei der Arbeit verwendest.
+        </span>
+        <form [formGroup]="contactForm"> 
+            <div class="user-login-input-container">
+                
+                <div class="user-login-box">
+                    <div class="user-login-email-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                            <mask id="mask0_14362_3213" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="24" height="24">
+                            <rect width="24" height="24" fill="#D9D9D9"/>
+                            </mask>
+                            <g mask="url(#mask0_14362_3213)">
+                            <path d="M4 20C3.45 20 2.97933 19.8043 2.588 19.413C2.196 19.021 2 18.55 2 18V6C2 5.45 2.196 4.97933 2.588 4.588C2.97933 4.196 3.45 4 4 4H20C20.55 4 21.021 4.196 21.413 4.588C21.8043 4.97933 22 5.45 22 6V18C22 18.55 21.8043 19.021 21.413 19.413C21.021 19.8043 20.55 20 20 20H4ZM20 8L12.525 12.675C12.4417 12.725 12.354 12.7623 12.262 12.787C12.1707 12.8123 12.0833 12.825 12 12.825C11.9167 12.825 11.8293 12.8123 11.738 12.787C11.646 12.7623 11.5583 12.725 11.475 12.675L4 8V18H20V8ZM12 11L20 6H4L12 11ZM4 8.25V6.775V6.8V6.787V8.25Z" fill="#686868"/>
+                            </g>
+                        </svg>
+                    </div>
+                    <input class="user-login-email" [ngClass]="{
+                        'warning': contactForm.get('emailInput')?.invalid && (contactForm.get('emailInput')?.dirty || contactForm.get('emailInput')?.touched)
+                    }" 
+                    formControlName="emailInput" 
+                    [placeholder]="'beispielname@email.com' " 
+                    type="email" 
+                    name="email" />
+                    
+                </div>
+            
+                <div *ngIf="contactForm.controls['emailInput'].invalid && (contactForm.controls['emailInput'].dirty || contactForm.controls['emailInput'].touched)">
+                    <span class="required-informations" *ngIf="contactForm.controls['emailInput'].errors?.['required']" [ngClass]="{'warning-text': true}">
+                        {{ '*Gültige E-Mail-Adresse eingeben.' }}
+                    </span>
+                    <span class="required-informations" *ngIf="contactForm.controls['emailInput'].hasError('email')" [ngClass]="{'warning-text': true}">
+                        {{ '*Diese E-Mail-Adresse ist leider ungültig.' }}
+                    </span>
+                </div>
+                <div class="user-login-box">
+                    <input class="user-login-password" [ngClass]="{
+                      'warning': contactForm.get('passwordInput')?.invalid && (contactForm.get('passwordInput')?.dirty || contactForm.get('passwordInput')?.touched)
+                    }" 
+                    formControlName="passwordInput" 
+                    [placeholder]="'Passwort' " 
+                    type="password" 
+                    name="password" />
+                  </div>
+                  <div *ngIf="contactForm.controls['passwordInput'].invalid && (contactForm.controls['passwordInput'].dirty || contactForm.controls['passwordInput'].touched)">
+                    <span class="required-informations" *ngIf="contactForm.controls['passwordInput'].errors?.['required']" [ngClass]="{'warning-password': true}">
+                      {{ '*Gültiges Passwort eingeben (mindestens 6 Zeichen).' }}
+                    </span>
+                  </div>
+            </div>
+        </form>
+        <span class="user-login-password-restore">
+            <a href="">Passwort vergessen ?</a>
+        </span>
+        <div class="user-login-seperation">
+            <div class="user-seperation-bar"></div>
+            <span>ODER</span>
+            <div class="user-seperation-bar"></div>
+        </div>
+        
+
+        <div class="user-login-button-container">
+            <button class="blue-button" mat-raised-button color="primary">Anmelden</button>
+            <button class="white-button" mat-stroked-button color="primary">Gäste-Login</button>
+        </div>
+</mat-card>
