--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,7 @@ body {
     font-family: Roboto, "Helvetica Neue", sans-serif; 
     background-color: #edeefe; 
 }
+
+.br-30{
+    border-radius: 30px;
+}
