--- a/src/app/startscreen/login/login.component.scss
+++ b/src/app/startscreen/login/login.component.scss
@@ -27,6 +27,7 @@
 
 .user-login-box{
     display: flex;
+    flex-direction: column;
     max-height: 60px;
     justify-content: center;
     margin-bottom: 40px;
@@ -35,7 +36,7 @@
 
 .user-login-email,
 .user-login-password{
-    width: 100%;
+    display: flex;
     height: 100%;
     border-radius: 100px;
     background-color: rgba(236, 238, 254, 1);
@@ -44,7 +45,6 @@
     padding: 18px 32px 18px 86px;
     outline: none;
     
-   
     &:focus{
         border: 1px solid rgba(83, 90, 241, 1);
     }
@@ -53,30 +53,93 @@
 
 .user-login-email-icon{
     display: flex;
-    position: absolute;
-    left: 88px;
-    top: 214px;
+    position: relative;
+    left: 30px;
+    top: 40px;
+    width: 50px;
 }
 
-.warning-text{
+.warning-text, .warning-password{
     display: flex;
-    position: absolute;
+    width: 100%;
+    position: relative;
     color: red;
-    top: 260px;
-    left: 70px;
+    top: -20px;
+    left: 0px;
+    
 }
-.warning-password{
+
+.user-login-password-restore{
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 29px;
+
+    a{
+    color: rgba(121, 126, 243, 1);
+    text-decoration: none;
+    padding: 5px 15px;
+    font-size: 18px;
+    cursor: pointer;
+
+    &:hover{
+        background-color: rgba(236, 238, 254, 1);
+        border-radius: 30px;
+        transition: background-color 0.15s ease-in-out;
+    }
+    }
+}
+
+.user-login-seperation{
     display: flex;
-    position: absolute;
-    color: red;
-    top: 355px;
-    left: 70px;
+    text-align: center;
+    font-size: 18px;
+    align-items: center;
+
+    p{
+        margin: 0px 15px;
+    }
+    margin-bottom: 150px;
+}
+
+.user-seperation-bar{
+    width: 100%;
+    border-bottom: 1px solid rgba(173, 176, 217, 1);
+}
+
+.user-login-button-container{
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+}
+
+.blue-button{
+    border-radius: 25px;
+    padding: 12px 25px;
+    height: 49px;
+    font-size: 18px;
+    background-color: rgba(68, 77, 242, 1) !important;
+
+    &:hover{
+        background-color: rgba(121, 126, 243, 1) !important;
+        transition: background-color 0.15s ease-in-out;
+    }
+}
+
+.white-button{
+    border-radius: 25px;
+    padding: 12px 25px;
+    height: 49px;
+    font-size: 18px;
+    border: 1px solid  rgba(68, 77, 242, 1) !important ;
+    
+
+    &:hover{
+        background-color: rgba(68, 77, 242, 1) !important;
+        transition: background-color 0.15s ease-in-out;
+        color: white;
+    }
 }
 
 .br-30 {
     border-radius: 30px;
-}
-
-.rounded-input {
-    border-radius: 100px;
 }
