--- a/src/app/startscreen/startscreen.component.html
+++ b/src/app/startscreen/startscreen.component.html
@@ -1,1 +1,12 @@
-<p>startscreen works!</p>
+<div id="startScreen-container">
+    <div id="startScreen-logo">
+        <img src="assets/img/logo/logo.svg" alt="logo">
+    </div>
+    <div id="startScreen-register">
+        <h3>Neu bei DA Bubble?</h3>
+        <a>Konto erstellen</a>
+    </div>
+
+    <app-login></app-login>
+
+</div>
