Impressum und Datenschutz

--- a/src/app/startscreen/login/login.component.html
+++ b/src/app/startscreen/login/login.component.html
@@ -71,9 +71,8 @@
             <div class="user-seperation-bar"></div>
         </div>
         
-
         <div class="user-login-button-container">
             <button class="blue-button" mat-raised-button color="primary">Anmelden</button>
-            <button class="white-button" mat-stroked-button color="primary">Gäste-Login</button>
+            <button class="white-button" mat-stroked-button color="primary" routerLink="/main">Gäste-Login</button>
         </div>
 </mat-card>
