--- a/src/app/startscreen/startscreen.component.html
+++ b/src/app/startscreen/startscreen.component.html
@@ -2,11 +2,18 @@
     <div id="startScreen-logo">
         <img src="assets/img/logo/logo.svg" alt="logo">
     </div>
-    <div id="startScreen-register">
+    <div id="startScreen-register" *ngIf="showLogin && !imprint && !privacyPolicy">
         <h3>Neu bei DA Bubble?</h3>
-        <a>Konto erstellen</a>
+        <a (click)="showLogin = false">Konto erstellen</a>
     </div>
 
-    <app-login></app-login>
+    <app-login *ngIf="showLogin && !imprint && !privacyPolicy"></app-login>
+    <app-register *ngIf="!showLogin && !imprint && !privacyPolicy"></app-register>
+    <app-imprint *ngIf="imprint" (closeImprintView)="closeImprintAndPrivacy()"></app-imprint>
+    <app-privacy-policy *ngIf="privacyPolicy" (closePrivacyPolicyView)="closeImprintAndPrivacy()"></app-privacy-policy>
 
+    <div id="startscreen-imprint-container">
+        <a (click)="imprint = true" *ngIf="!imprint && !privacyPolicy">Impressum</a>
+        <a (click)="privacyPolicy = true" *ngIf="!imprint && !privacyPolicy">Datenschutz</a>
+    </div>
 </div>
