--- a/src/app/startscreen/startscreen.component.scss
+++ b/src/app/startscreen/startscreen.component.scss
@@ -1,20 +1,31 @@
-#startScreen-container{
+#startScreen-container {
     height: 100vh;
     width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    gap: 48px;
 }
 
-
-#startScreen-logo{
+#startScreen-logo {
     position: absolute;
-    top: 24px; 
-    left: 24px; 
+    top: 24px;
+    left: 24px;
 }
 
-#startScreen-register{
+#startScreen-register {
     position: absolute;
-    top: 24px; 
-    right: 24px; 
+    top: 24px;
+    right: 24px;
+}
+
+#startscreen-imprint-container {
+    position: absolute;
+    bottom: 50px;
+    display: flex;
+    gap: 48px;
+    a{
+        text-decoration: none;
+    }
 }
