--- a/src/app/mainscreen/mainscreen.component.html
+++ b/src/app/mainscreen/mainscreen.component.html
@@ -1,7 +1,9 @@
 <div id="main-container">
-    <app-header></app-header>
+
+    <app-header id="main-header"></app-header>
+    
     <div id="main-body">    
-        <app-sidenav></app-sidenav>
+        <app-sidenav id="main-sidebar"></app-sidenav>
 
 
     </div>
