--- a/src/app/mainscreen/sidenav/sidenav.component.html
+++ b/src/app/mainscreen/sidenav/sidenav.component.html
@@ -1,1 +1,3 @@
-<p>sidenav works!</p>
+<mat-card id="sidenav" class="br-30">
+    <mat-card-content id="sidenav-content">Side Nav</mat-card-content>
+</mat-card>
