Login Add Google Button

--- a/src/app/startscreen/login/login.component.html
+++ b/src/app/startscreen/login/login.component.html
@@ -70,6 +70,15 @@
             <span><p>ODER</p></span>
             <div class="user-seperation-bar"></div>
         </div>
+        <div class="user-google-login">
+            <div>
+                <img src="./assets/img/icons/Google.svg">
+            </div>
+            <span>
+                Anmeldung mit Google
+            </span>
+        </div>
+
         
         <div class="user-login-button-container">
             <button class="blue-button" mat-raised-button color="primary">Anmelden</button>
