--- a/src/app/startscreen/login/login.component.scss
+++ b/src/app/startscreen/login/login.component.scss
@@ -45,11 +45,17 @@
     border: none;
     padding: 18px 32px 18px 86px;
     outline: none;
+    cursor: pointer;
+
+    &:hover{
+        border: 1px solid black;
+        
+    }
     
     &:focus{
         border: 1px solid rgba(83, 90, 241, 1);
     }
-
+    
 }
 
 .user-login-email-icon{
@@ -99,12 +105,36 @@
     p{
         margin: 0px 15px;
     }
-    margin-bottom: 150px;
+    margin-bottom: 56px;
 }
 
 .user-seperation-bar{
     width: 100%;
     border-bottom: 1px solid rgba(173, 176, 217, 1);
+}
+
+.user-google-login {
+    display: flex;
+    background-color: rgb(236, 238, 254);
+    padding: 11px 32px;
+    border-radius: 100px;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 43px;
+    cursor: pointer;
+    font-size: 18px;
+    color: rgba(68, 77, 242, 1);
+
+    &:hover {
+        border: 1px solid rgba(68, 77, 242, 1);
+        font-weight: bold;
+    }
+
+    &:active {
+        border: 1px solid black;
+        font-weight: 400;
+    }
 }
 
 .user-login-button-container{
