authService Log In

--- a/src/app/startscreen/login/login.component.html
+++ b/src/app/startscreen/login/login.component.html
@@ -87,7 +87,7 @@
 
 
     <div class="user-login-button-container">
-        <button class="blue-button" mat-raised-button color="primary">Anmelden</button>
+        <button class="blue-button" mat-raised-button color="primary" (click)="login()">Anmelden</button>
         <button class="white-button" mat-stroked-button color="primary" routerLink="/main">Gäste-Login</button>
     </div>
 </mat-card>
