--- a/src/app/mainscreen/header/header.component.html
+++ b/src/app/mainscreen/header/header.component.html
@@ -1,5 +1,8 @@
 <div id="header-container">
     <img src="assets/img/logo/logo.svg" alt="DABubble Logo">
     <input id="header-searchfield" type="text" placeholder="Code learning durchsuchen">
-    <h1>User</h1>
+    <div>
+        <h1>User</h1>
+        <a (click)="logout()">Logout</a>
+    </div>
 </div>
