--- a/src/app/startscreen/login/login.component.html
+++ b/src/app/startscreen/login/login.component.html
@@ -88,6 +88,6 @@
 
     <div class="user-login-button-container">
         <button class="blue-button" mat-raised-button color="primary" (click)="login()">Anmelden</button>
-        <button class="white-button" mat-stroked-button color="primary" routerLink="/main">Gäste-Login</button>
+        <button class="white-button" mat-stroked-button color="primary" (click)="guestLogin()">Gäste-Login</button>
     </div>
 </mat-card>
