--- a/src/app/startscreen/login/login.component.html
+++ b/src/app/startscreen/login/login.component.html
@@ -80,7 +80,7 @@
         <div>
             <img src="./assets/img/icons/Google.svg">
         </div>
-        <span>
+        <span (click)="loginWithGoogle()">
             Anmeldung mit Google
         </span>
     </div>
