--- a/src/app/startscreen/login/login.component.scss
+++ b/src/app/startscreen/login/login.component.scss
@@ -3,6 +3,7 @@
     max-height: 769px;
     padding: 50px 53px;
     background: white;
+    box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.08);
 }
 
 .user-login-title {
