--- a/src/app/startscreen/login/login.component.html
+++ b/src/app/startscreen/login/login.component.html
@@ -8,23 +8,13 @@
         <div class="user-login-input-container">
 
             <div class="user-login-box">
-                <div class="user-login-email-icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                        <mask id="mask0_14362_3213" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0"
-                            width="24" height="24">
-                            <rect width="24" height="24" fill="#D9D9D9" />
-                        </mask>
-                        <g mask="url(#mask0_14362_3213)">
-                            <path
-                                d="M4 20C3.45 20 2.97933 19.8043 2.588 19.413C2.196 19.021 2 18.55 2 18V6C2 5.45 2.196 4.97933 2.588 4.588C2.97933 4.196 3.45 4 4 4H20C20.55 4 21.021 4.196 21.413 4.588C21.8043 4.97933 22 5.45 22 6V18C22 18.55 21.8043 19.021 21.413 19.413C21.021 19.8043 20.55 20 20 20H4ZM20 8L12.525 12.675C12.4417 12.725 12.354 12.7623 12.262 12.787C12.1707 12.8123 12.0833 12.825 12 12.825C11.9167 12.825 11.8293 12.8123 11.738 12.787C11.646 12.7623 11.5583 12.725 11.475 12.675L4 8V18H20V8ZM12 11L20 6H4L12 11ZM4 8.25V6.775V6.8V6.787V8.25Z"
-                                fill="#686868" />
-                        </g>
-                    </svg>
+                <div class="user-login-icon">
+                    <img [src]="isInputActive ? './assets/img/icons/mailblack.svg' : './assets/img/icons/mailgrey.svg'">
                 </div>
                 <input class="user-login-email" [ngClass]="{
-                        'warning': contactForm.get('emailInput')?.invalid && (contactForm.get('emailInput')?.dirty || contactForm.get('emailInput')?.touched)
-                    }" formControlName="emailInput" [placeholder]="'beispielname@email.com' " type="email"
-                    name="email" />
+                    'warning': contactForm.get('emailInput')?.invalid && (contactForm.get('emailInput')?.dirty || contactForm.get('emailInput')?.touched)
+                }" formControlName="emailInput" [placeholder]="'beispielname@email.com' " type="email" name="email"
+                    (focus)="isInputActive = true" (blur)="isInputActive = false">
             </div>
 
             <div
@@ -39,22 +29,14 @@
                 </span>
             </div>
             <div class="user-login-box">
-                <div class="user-login-email-icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                        <mask id="mask0_14362_14370" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0"
-                            width="24" height="24">
-                            <rect width="24" height="24" fill="#D9D9D9" />
-                        </mask>
-                        <g mask="url(#mask0_14362_14370)">
-                            <path
-                                d="M6 22C5.45 22 4.97933 21.8043 4.588 21.413C4.196 21.021 4 20.55 4 20V10C4 9.45 4.196 8.979 4.588 8.587C4.97933 8.19567 5.45 8 6 8H7V6C7 4.61667 7.48767 3.43733 8.463 2.462C9.43767 1.48733 10.6167 1 12 1C13.3833 1 14.5627 1.48733 15.538 2.462C16.5127 3.43733 17 4.61667 17 6V8H18C18.55 8 19.021 8.19567 19.413 8.587C19.8043 8.979 20 9.45 20 10V20C20 20.55 19.8043 21.021 19.413 21.413C19.021 21.8043 18.55 22 18 22H6ZM6 20H18V10H6V20ZM12 17C12.55 17 13.021 16.8043 13.413 16.413C13.8043 16.021 14 15.55 14 15C14 14.45 13.8043 13.979 13.413 13.587C13.021 13.1957 12.55 13 12 13C11.45 13 10.9793 13.1957 10.588 13.587C10.196 13.979 10 14.45 10 15C10 15.55 10.196 16.021 10.588 16.413C10.9793 16.8043 11.45 17 12 17ZM9 8H15V6C15 5.16667 14.7083 4.45833 14.125 3.875C13.5417 3.29167 12.8333 3 12 3C11.1667 3 10.4583 3.29167 9.875 3.875C9.29167 4.45833 9 5.16667 9 6V8Z"
-                                fill="#686868" />
-                        </g>
-                    </svg>
+                <div class="user-login-icon">
+                    <img
+                        [src]="isPasswordInputActive ? './assets/img/icons/lockblack.svg' : './assets/img/icons/lockgrey.svg'">
                 </div>
                 <input class="user-login-password warning" [ngClass]="{
-                        'warning': contactForm.get('passwordInput')?.invalid && (contactForm.get('passwordInput')?.dirty || contactForm.get('passwordInput')?.touched)
-                    }" formControlName="passwordInput" [placeholder]="'Passwort' " type="password" name="password" />
+                    'warning': contactForm.get('passwordInput')?.invalid && (contactForm.get('passwordInput')?.dirty || contactForm.get('passwordInput')?.touched)
+                }" formControlName="passwordInput" [placeholder]="'Passwort'" type="password" name="password"
+                    (focus)="isPasswordInputActive = true" (blur)="isPasswordInputActive = false">
             </div>
             <div
                 *ngIf="contactForm.controls['passwordInput'].invalid && (contactForm.controls['passwordInput'].dirty || contactForm.controls['passwordInput'].touched)">
@@ -63,30 +45,31 @@
                     {{ '*Gültiges Passwort eingeben (mindestens 6 Zeichen).' }}
                 </span>
             </div>
+
+            <span class="user-login-password-restore">
+                <a href="">Passwort vergessen ?</a>
+            </span>
+            <div class="user-login-seperation">
+                <div class="user-seperation-bar"></div>
+                <span>
+                    <p>ODER</p>
+                </span>
+                <div class="user-seperation-bar"></div>
+            </div>
+            <div class="user-google-login">
+                <div>
+                    <img src="./assets/img/icons/Google.svg">
+                </div>
+                <span (click)="loginWithGoogle()">
+                    Anmeldung mit Google
+                </span>
+            </div>
+
+            <div class="user-login-button-container">
+                <button class="blue-button" mat-raised-button color="primary" (click)="login()">Anmelden</button>
+                <button class="white-button" mat-stroked-button color="primary"
+                    (click)="guestLogin()">Gäste-Login</button>
+            </div>
         </div>
     </form>
-    <span class="user-login-password-restore">
-        <a href="">Passwort vergessen ?</a>
-    </span>
-    <div class="user-login-seperation">
-        <div class="user-seperation-bar"></div>
-        <span>
-            <p>ODER</p>
-        </span>
-        <div class="user-seperation-bar"></div>
-    </div>
-    <div class="user-google-login">
-        <div>
-            <img src="./assets/img/icons/Google.svg">
-        </div>
-        <span (click)="loginWithGoogle()">
-            Anmeldung mit Google
-        </span>
-    </div>
-
-
-    <div class="user-login-button-container">
-        <button class="blue-button" mat-raised-button color="primary" (click)="login()">Anmelden</button>
-        <button class="white-button" mat-stroked-button color="primary" (click)="guestLogin()">Gäste-Login</button>
-    </div>
 </mat-card>
