--- a/src/app/startscreen/login/login.component.scss
+++ b/src/app/startscreen/login/login.component.scss
@@ -1,6 +1,5 @@
 .user-login-container {
     max-width: 606px;
-    max-height: 769px;
     padding: 50px 53px;
     background: white;
     box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.08);
@@ -59,11 +58,11 @@
     
 }
 
-.user-login-email-icon{
+.user-login-icon{
     display: flex;
     position: relative;
     left: 30px;
-    top: 40px;
+    top: 41px;
     width: 50px;
 }
 
