--- a/src/app/mainscreen/header/header.component.html
+++ b/src/app/mainscreen/header/header.component.html
@@ -1,8 +1,12 @@
 <div id="header-container">
     <img src="assets/img/logo/logo.svg" alt="DABubble Logo">
     <input id="header-searchfield" type="text" placeholder="Code learning durchsuchen">
-    <div>
-        <h1>User</h1>
+    <div id="header-user">
+        <h1>{{user.firstName}} {{user.lastName}}</h1>
+        <div id="header-user-icon">
+            <img src="assets/img/avatar/avatar1.svg" alt="UserIcon">
+            <div id="header-status"></div>
+        </div> 
         <a (click)="logout()">Logout</a>
     </div>
 </div>
