--- a/src/app/mainscreen/header/header.component.scss
+++ b/src/app/mainscreen/header/header.component.scss
@@ -9,5 +9,30 @@
         width: 50%;
         border-radius: 42px;
         height: 40px;
+        border: 0px;
+        padding-left: 24px;
+    }
+    #header-user{
+        display: flex;
+        align-items: center;
+        gap:12px;
+        #header-user-icon{
+            position: relative;
+            img{
+                width: 50px;
+                border-radius: 50%;
+            }
+            #header-status{
+                position: absolute;
+                bottom: 4px;
+                right: 4px;
+                min-width: 10px;
+                min-height: 10px;
+                border-radius: 50%;
+                background-color: green;
+                z-index: 10;
+                border: 1px solid white;
+            }
+        }
     }
 }
