--- a/src/app/mainscreen/channel/channel.component.html
+++ b/src/app/mainscreen/channel/channel.component.html
@@ -1,1 +1,3 @@
-<p>channel works!</p>
+<mat-card id="channel" class="br-30">
+    <mat-card-content id="channel-content">channel</mat-card-content>
+</mat-card>
