--- a/src/app/mainscreen/chat/chat.component.html
+++ b/src/app/mainscreen/chat/chat.component.html
@@ -1,1 +1,3 @@
-<p>chat works!</p>
+<mat-card id="chat" class="br-30">
+    <mat-card-content id="chat-content">Chat</mat-card-content>
+</mat-card>
