--- a/src/app/mainscreen/thread/thread.component.html
+++ b/src/app/mainscreen/thread/thread.component.html
@@ -1,1 +1,3 @@
-<p>thread works!</p>
+<mat-card id="thread" class="br-30">
+    <mat-card-content id="thread-content">thread</mat-card-content>
+</mat-card>
