--- a/src/app/mainscreen/header/header.component.html
+++ b/src/app/mainscreen/header/header.component.html
@@ -1,5 +1,7 @@
 <div id="header-container">
-    <img src="assets/img/logo/logo.svg" alt="DABubble Logo">
+    <div id="header-image-container">
+        <img src="assets/img/logo/logo.svg" alt="DABubble Logo">
+    </div>
     <input id="header-searchfield" type="text" placeholder="Code learning durchsuchen">
     <div id="header-user">
         <h1>{{user.firstName}} {{user.lastName}}</h1>
