Add Form Validation

--- a/src/app/startscreen/register/register.component.html
+++ b/src/app/startscreen/register/register.component.html
@@ -84,7 +84,8 @@
     </div>
 
     <div class="user-register-button-container">
-            <button class="blue-button" mat-raised-button color="primary">Weiter</button>
+        <button class="blue-button" mat-raised-button color="primary" [disabled]="isButtonDisabled()" [ngClass]="{'disabled-button': isButtonDisabled()}">Weiter</button>
+
     </div>
    
 </mat-card>
