improved Layout of Firebase interface; added message component

--- a/src/app/mainscreen/mainscreen.component.html
+++ b/src/app/mainscreen/mainscreen.component.html
@@ -9,3 +9,10 @@
         <app-thread id="main-thread"></app-thread>
     </div>
 </div>
+
+
+<!--
+EXAMPLE MESSAGE OUTPUT
+<app-message [id]="messageRef"></app-message>
+<app-message [id]="messageRef2"></app-message>
+-->
