--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,6 +25,10 @@ body {
     background-color: #edeefe;
 }
 
+.dsp-none{
+    display: none;
+}
+
 input {
     font-family: 'Nunito', sans-serif;
 }
