--- a/src/app/mainscreen/mainscreen.component.scss
+++ b/src/app/mainscreen/mainscreen.component.scss
@@ -33,5 +33,25 @@ app-channel{
         }
 
     }
-  
+}
+
+#workspace{
+    position: fixed;
+    left: -125px;
+    bottom: 30vh;
+    z-index: 10;
+    width: 250px;
+    transform: rotate(90deg);
+    border-radius: 30px 30px 0px 0px;
+    padding-left: 18px;
+    padding-right: 18px;
+    box-shadow: 11px 28px 77px 0px rgba(0,0,0,0.75);
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &:hover{
+        color: #535AF1;
+        cursor: pointer;
+    }
 }
