--- a/src/app/startscreen/avatar-choose/avatar-choose.component.scss
+++ b/src/app/startscreen/avatar-choose/avatar-choose.component.scss
@@ -1,74 +1,105 @@
 .user-avatar-container {
-    max-width: 606px;
-    padding: 50px 53px;
-    background: white;
-    box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.08);
+  max-width: 606px;
+  padding: 50px 53px;
+  background: white;
+  box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.08);
 }
 
 .user-avatar-title {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    font-size: 20px;
-    gap: 32px;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  font-size: 20px;
+  gap: 32px;
+  align-items: center;
 
-    h1 {
-        font-size: 46px;
-        color: rgba(68, 77, 242, 1);
-        margin: 0px;
-    }
+  h1 {
+    font-size: 46px;
+    color: rgba(68, 77, 242, 1);
+    margin: 0px;
+  }
 }
 
 .user-uper-avatar-title {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 
-    img {
-        position: relative;
-        left: -20px;
-    }
-
+  img {
+    position: relative;
+    left: -20px;
+  }
 }
 
-.avatar-box{
+.avatar-box {
+  padding: 16px;
+  display: flex;
+  justify-content: center;
+
+  img {
+    border-radius: 100px;
     width: 168px;
     height: 168px;
-    padding: 16px;
-    border-radius: 100px;
-    background-color: rgb(121, 126, 243);
+  }
+}
+
+.choose-avatar-container {
     display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
     justify-content: center;
 }
 
-.user-avatar-button-container {
+.choose-avatar-text-box{
     display: flex;
-    justify-content: flex-end;
-    gap: 30px;
+    justify-content: flex-start;
+    width: 100%;
+    padding-left: 20px;
+    font-size: 20px;
 }
 
+.choose-avatar-box {
+   
+    img {
+        
+        border-radius: 100px;
+        max-height: 72px;
+        max-width: 72px;
+        cursor: pointer;
+        border: 5px solid transparent; /* Füge einen transparenten Rahmen hinzu */
+        box-sizing: border-box; /* Berücksichtige das Padding in der Gesamtgröße */
+        margin: 0;
+        &:hover {
+            border: 4px solid rgba(173, 176, 217, 0.4);
+        }
+    }
+}
+
+.user-avatar-button-container {
+  display: flex;
+  justify-content: flex-end;
+  gap: 30px;
+}
 
 .blue-button {
-    border-radius: 25px;
-    padding: 12px 25px;
-    height: 49px;
-    font-size: 18px;
-    margin-top: 35px;
-    background-color: rgba(68, 77, 242, 1) !important;
-  
-    &:hover {
-      background-color: rgba(121, 126, 243, 1) !important;
-      transition: background-color 0.15s ease-in-out;
-    }
-  
-    &.disabled-button {
-      background-color: gray !important;
-      cursor: not-allowed;
-    }
+  border-radius: 25px;
+  padding: 12px 25px;
+  height: 49px;
+  font-size: 18px;
+  margin-top: 35px;
+  background-color: rgba(68, 77, 242, 1) !important;
+
+  &:hover {
+    background-color: rgba(121, 126, 243, 1) !important;
+    transition: background-color 0.15s ease-in-out;
   }
 
+  &.disabled-button {
+    background-color: gray !important;
+    cursor: not-allowed;
+  }
+}
 
 .br-30 {
-    border-radius: 30px;
+  border-radius: 30px;
 }
