--- a/src/app/startscreen/avatar-choose/avatar-choose.component.scss
+++ b/src/app/startscreen/avatar-choose/avatar-choose.component.scss
@@ -66,8 +66,8 @@
         max-height: 72px;
         max-width: 72px;
         cursor: pointer;
-        border: 5px solid transparent; /* Füge einen transparenten Rahmen hinzu */
-        box-sizing: border-box; /* Berücksichtige das Padding in der Gesamtgröße */
+        border: 5px solid transparent; 
+        box-sizing: border-box; 
         margin: 0;
         &:hover {
             border: 4px solid rgba(173, 176, 217, 0.4);
