--- a/src/app/mainscreen/header/header.component.html
+++ b/src/app/mainscreen/header/header.component.html
@@ -8,7 +8,15 @@
         <div id="header-user-icon">
             <img src="assets/img/avatar/avatar1.svg" alt="UserIcon">
             <div id="header-status"></div>
-        </div> 
-        <a (click)="logout()">Logout</a>
+        </div>
+        <div>
+            <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+                <mat-icon>expand_more</mat-icon>
+              </button>
+            <mat-menu #menu="matMenu">
+                <button mat-menu-item>Profil</button>
+                <button mat-menu-item (click)="logout()">Logout</button>
+            </mat-menu>
+        </div>
     </div>
 </div>
