--- a/src/app/mainscreen/sidenav/sidenav.component.html
+++ b/src/app/mainscreen/sidenav/sidenav.component.html
@@ -1,3 +1,63 @@
 <mat-card id="sidenav" class="br-30">
-    <mat-card-content id="sidenav-content">Side Nav</mat-card-content>
+    <!--<mat-card-content id="sidenav-content">Side Nav</mat-card-content>-->
+
+    <div class="sidenavHeader">
+        <img src="/assets/img/logo/codeLearningLogo.png">
+        <h3>Code learning</h3>
+        <button mat-icon-button class="editSquare">
+            <mat-icon>
+                <img src="/assets/img/icons/editSquare.png">
+            </mat-icon>
+        </button>
+    </div>
+
+
+    <div class="myChannelsContainer">
+
+        <div class="myChannelsHeader">
+            <div (click)="showChannels()" class="myChannelsHeader2">
+                <img class="pad-right17 arrow_drop_channels" id="arrow_drop_channels"
+                    [src]="unpackChannels ? '/assets/img/icons/arrow_drop_down.png' : '/assets/img/icons/arrow_drop.png'">
+                <img class="pad-right17 workspaces" src="/assets/img/icons/workspaces.png">
+                <h3 class="myChannelsHeaderText">Channels</h3>
+            </div>
+            <button mat-icon-button class="add">
+                <mat-icon>
+                    <img class="addImage"  src="/assets/img/icons/add.png">
+                </mat-icon>
+            </button>
+
+        </div>
+
+        <div class="myChannelsDropdown" id="myChannelsDropdown" *ngIf="unpackChannels">
+
+            <div class="myChannels">
+                # HTML<br>
+                # CSS<br>
+                # javascript<br>
+            </div>
+
+            <div class="addChannel">
+                <img class="pad-right17" src="/assets/img/icons/add_circle.png">
+                Channel hinzufügen
+            </div>
+
+        </div>
+
+    </div>
+
+    <div (click)="showMessages()" class="myMessagesContainer">
+        <div class="myMessagesHeader">
+            <img class="pad-right17 arrow_drop" src="/assets/img/icons/arrow_drop.png"
+                [src]="unpackMessages ? '/assets/img/icons/arrow_drop_down.png' : '/assets/img/icons/arrow_drop.png'">
+            <img class="pad-right17 accountIcon" src="/assets/img/icons/accountIcon.png">
+            <h3 class="myMessagesHeaderText">Direktnachrichten</h3>
+        </div>
+
+
+        <div class="myMessages" id="myMessages" *ngIf="unpackMessages">
+            Frederick Beck(Du)
+        </div>
+    </div>
+
 </mat-card>
