--- a/src/app/startscreen/login/login.component.scss
+++ b/src/app/startscreen/login/login.component.scss
@@ -96,6 +96,19 @@
     }
 }
 
+.user-register-passwort-hide{
+    display: flex;
+    position: relative;
+    left: 450px;
+    top: -41px;
+    width: 50px;
+    img{
+        width: 24px;
+        height: 24px;
+    }
+}
+
+
 .user-login-seperation{
     display: flex;
     text-align: center;
