--- a/src/app/startscreen/login/login.component.scss
+++ b/src/app/startscreen/login/login.component.scss
@@ -96,17 +96,19 @@
     }
 }
 
-.user-register-passwort-hide{
+.user-register-passwort-hide {
     display: flex;
-    position: relative;
-    left: 450px;
-    top: -41px;
-    width: 50px;
+    position: absolute; 
+    right: 75px;
+    top: 375px;
+    
     img{
         width: 24px;
         height: 24px;
     }
 }
+
+
 
 
 .user-login-seperation{
