--- a/src/app/mainscreen/header/header.component.scss
+++ b/src/app/mainscreen/header/header.component.scss
@@ -10,6 +10,8 @@ $headerUser-width: 300px;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 24px;
+    position:relative;
+
     #header-image-container{
         min-width: $headerImage-width;
     }
@@ -46,9 +48,33 @@ $headerUser-width: 300px;
                 border: 1px solid white;
             }
         }
+        #headerDropdown{
+          
+        
+
+        }
     }
 }
 
 .mat-mdc-menu-panel{
     border-radius: 30px !important;
+}
+#headerMenu{
+    width: 100px;
+    position: absolute;
+    background-color: white;
+    border-radius: 30px 0px 30px 30px;
+    top: 100px;
+    right: 0px;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap:24px;
+    padding: 24px;
+    box-shadow: 0px 6px 10px 0px #00000033;
+    a{
+        cursor: pointer;
+    }
 }
