--- a/src/app/mainscreen/header/header.component.scss
+++ b/src/app/mainscreen/header/header.component.scss
@@ -48,24 +48,24 @@ $headerUser-width: 300px;
                 border: 1px solid white;
             }
         }
-        #headerDropdown{
-          
-        
-
-        }
     }
 }
 
 .mat-mdc-menu-panel{
     border-radius: 30px !important;
 }
+
+
+$headerDropdownPositionTop: 100px; 
+$headerDropdownPositionRigth: 0px; 
+
 #headerMenu{
     width: 100px;
     position: absolute;
     background-color: white;
     border-radius: 30px 0px 30px 30px;
-    top: 100px;
-    right: 0px;
+    top: $headerDropdownPositionTop;
+    right: $headerDropdownPositionRigth; 
     z-index: 1;
     display: flex;
     flex-direction: column;
@@ -76,5 +76,35 @@ $headerUser-width: 300px;
     box-shadow: 0px 6px 10px 0px #00000033;
     a{
         cursor: pointer;
+    }
+}
+#headerUserProfil{
+    padding: 24px;
+    min-width: 100px;
+    min-height: 100px;
+    z-index: 1;
+    top:  $headerDropdownPositionTop;
+    right: $headerDropdownPositionRigth; 
+    position: absolute;
+    background-color: white;
+    border-radius: 30px 0px 30px 30px;
+    box-shadow: 0px 6px 10px 0px #00000033;
+    #headerUserProfil-header{
+        display: flex;
+        justify-content: space-between;
+    }
+    #headerUserProfil-image-container{
+        width: 100%; 
+        display: flex;
+        justify-content: center;
+        img{
+            width: 30%; 
+            border-radius: 50%;
+        }
+    }
+    #headerUserProfil-name{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
     }
 }
