--- a/src/app/mainscreen/channel/channel.component.scss
+++ b/src/app/mainscreen/channel/channel.component.scss
@@ -1,16 +1,21 @@
 #channel {
     height: 100%;
     flex-grow: 1;
-    display:flex;
+    display: flex;
     justify-content: flex-end;
     flex-direction: column;
-    margin:0;
+    margin: 0;
     border-radius: 30px;
-    padding:35px;
+    padding: 35px;
 
 }
 
 .align-bottom {
     position: sticky;
     bottom: 0;
+}
+
+.chat-container {
+    overflow-y: auto;
+    height: 100%;
 }
