--- a/src/app/startscreen/login/login.component.scss
+++ b/src/app/startscreen/login/login.component.scss
@@ -189,3 +189,9 @@
 .br-30 {
     border-radius: 30px;
 }
+
+#loginFailed-container{
+    color: red;
+    text-align: center;
+    padding-bottom: 24px;
+}
