--- a/src/app/mainscreen/channel/message-create/message-create.component.html
+++ b/src/app/mainscreen/channel/message-create/message-create.component.html
@@ -1,7 +1,7 @@
 <textarea 
     class="message-write-container" 
     [(ngModel)]="message.content"
-    *ngIf="firebaseChannelService.loadedChannels[firebaseChannelService.loadedChannelId]"
-    placeholder="Nachricht an #{{ firebaseChannelService.loadedChannels[firebaseChannelService.loadedChannelId].channelName }}">
+    *ngIf="channelFirebaseService.loadedChannels[channelFirebaseService.loadedChannelId]"
+    placeholder="Nachricht an #{{ channelFirebaseService.loadedChannels[channelFirebaseService.loadedChannelId].channelName }}">
 </textarea>
-<button (click)="createMessage()">Create Messge</button>
+<button (click)="createMessage()">Create Message</button>
